tests/tests/roundtrip/invalid/semantic/typecheck/matrix_in_set_expr/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic/typecheck/matrix_in_set_expr/input.essence:3:20:
  |
3 | such that s supset s2
  |                    ^
Type error: s2
	Expected: set
	Got: matrix